--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,10 @@
 body {
   background-color: hsl(225 10% 17.5%);
+  overflow-anchor: none;
 }
 a {
   color: inherit;
+  word-break: break-word;
 }
 .App {
   padding: 25px;
@@ -13,9 +15,10 @@ a {
   gap: 25px;
   line-height: 1;
   font-size: 15px;
+  padding-bottom: 100px;
 
   @media (max-width: 800px) {
-    zoom: 0.75;
+    zoom: 0.85;
   }
 
   > .loading,
@@ -30,6 +33,8 @@ a {
     display: flex;
     flex-direction: column;
     // gap: 15px;
+    --starting-color: 225;
+    --color-jump: 45;
 
     .comment-container {
       display: flex;
@@ -39,22 +44,45 @@ a {
       scroll-margin-top: 12.5px;
       transition: 0.25s linear;
 
-      > .is-new {
+      &.is-very-old {
+        filter: grayscale(0.75) brightness(0.85);
+      }
+
+      &.is-new {
         display: grid;
         // transition: 0.15s ease-out;
-        // animation: grid-ani 0.4s cubic-bezier(0, 0.55, 0.45, 1) forwards;
-        animation: grid-ani 0.25s linear forwards;
+        // animation: grid-ani 0.25s linear forwards;
+        animation: comment-grid-ani 0.25s ease-out forwards;
 
         > .comment-container-inner {
           overflow: hidden;
         }
+
+        &:last-child {
+          > .comment-container-inner {
+            margin-bottom: 0px;
+          }
+        }
+        &:not(:last-child) {
+          > .comment-container-inner {
+            animation: comment-margin-ani 0.25s ease-out forwards;
+          }
+        }
       }
-      @keyframes grid-ani {
+      @keyframes comment-grid-ani {
         0% {
           grid-template-rows: 0fr;
         }
         100% {
           grid-template-rows: 1fr;
+        }
+      }
+      @keyframes comment-margin-ani {
+        0% {
+          margin-bottom: 0px;
+        }
+        100% {
+          margin-bottom: 15px;
         }
       }
       &:last-child {
@@ -64,6 +92,8 @@ a {
       }
       > .comment-container-inner {
         margin-bottom: 15px;
+        // transition: 0.5s linear;
+        // transition: 0.25s linear;
 
         > .comment {
           display: flex;
@@ -73,7 +103,7 @@ a {
 
           > .left {
             min-width: 10px;
-            background-color: hsl(calc(var(--m) * 30 + 225) 50% 50%);
+            background-color: hsl(calc(var(--depth) * var(--color-jump) + var(--starting-color)) 50% 50%);
           }
           > .right {
             flex: 1;
@@ -84,9 +114,11 @@ a {
             > .header {
               display: flex;
               align-items: center;
-              gap: 25px;
+              justify-content: end;
+              gap: 5px 25px;
               padding: 5px 10px;
-              background-color: hsl(calc(var(--m) * 30 + 225) 20% 22.5%);
+              background-color: hsl(calc(var(--depth) * var(--color-jump) + var(--starting-color)) 20% 22.5%);
+              flex-wrap: wrap;
 
               @media (max-width: 800px) {
                 zoom: 0.75;
@@ -103,6 +135,7 @@ a {
                   color: hsl(225 100% 95%);
                   font-weight: 800;
                   font-size: 17.5px;
+                  text-shadow: 0 0 10px hsl(calc(var(--depth) * var(--color-jump) + var(--starting-color)) 100% 50%);
                 }
                 > .flair {
                   display: flex;
@@ -119,6 +152,35 @@ a {
                   }
                 }
               }
+              > .refresh-comment {
+                color: hsl(225 25% 85%);
+                cursor: pointer;
+
+                position: relative;
+                &:before {
+                  content: "";
+                  position: absolute;
+                  inset: -5px;
+                  background: #fff1;
+                }
+
+                > svg {
+                  rotate: 0;
+                  transition: 0.5s ease-out;
+                }
+                &.is-refreshing-comment > svg {
+                  animation: rotate-ani 0.5s linear infinite;
+
+                  @keyframes rotate-ani {
+                    0% {
+                      rotate: 0turn;
+                    }
+                    100% {
+                      rotate: -1turn;
+                    }
+                  }
+                }
+              }
               > .replies-count {
                 color: hsl(225 25% 85%);
                 font-family: JetBrains Mono;
@@ -127,6 +189,7 @@ a {
                 display: flex;
                 align-items: center;
                 gap: 7.5px;
+                // display: none;
 
                 > .upvote,
                 > .downvote {
@@ -196,17 +259,65 @@ a {
                   flex-direction: column;
                   gap: 5px;
                 }
+                blockquote {
+                  border-left: 5px solid hsl(calc((var(--depth) - 1) * var(--color-jump) + var(--starting-color)) 50% 50%);
+                  background: hsl(calc((var(--depth) - 1) * var(--color-jump) + var(--starting-color)) 20% 22.5%);
+                  padding: 5px 10px;
+                  align-self: start;
+                }
               }
             }
           }
         }
-        > .replies {
-          display: flex;
-          flex-direction: column;
-          // gap: 15px;
-          padding-left: 25px;
-          border-left: 2.5px solid hsl(calc(var(--m) * 30 + 225) 50% 50%);
-          padding-top: 15px;
+        > .replies-container {
+          display: grid;
+          transition: 0.25s ease-out;
+          grid-template-rows: 1fr;
+          animation: reverse-replies-grid-ani 0.25s ease-out forwards;
+
+          &.is-refreshing-comment {
+            animation: replies-grid-ani 0.25s ease-out forwards;
+          }
+          @keyframes replies-grid-ani {
+            0% {
+              grid-template-rows: 1fr;
+            }
+            100% {
+              grid-template-rows: 0fr;
+            }
+          }
+          @keyframes reverse-replies-grid-ani {
+            0% {
+              grid-template-rows: 0fr;
+            }
+            100% {
+              grid-template-rows: 1fr;
+            }
+          }
+          > .replies {
+            overflow: hidden;
+
+            > .replies-inner {
+              display: flex;
+              flex-direction: column;
+              // gap: 15px;
+              border-left: 2.5px solid hsl(calc(var(--depth) * var(--color-jump) + var(--starting-color)) 50% 50%);
+
+              padding-left: 20px;
+              padding-top: 15px;
+
+              // > .comment-container {
+              //   > .comment-container-inner {
+              //     padding-left: 25px;
+              //   }
+              //   &:first-child {
+              //     > .comment-container-inner {
+              //       padding-top: 15px;
+              //     }
+              //   }
+              // }
+            }
+          }
         }
 
         &.collapse {
