--- a/src/App.scss
+++ b/src/App.scss
@@ -25,8 +25,18 @@ a {
     zoom: 0.75;
   }
 
-  > .home > a {
-    color: hsl(225 75% 75%);
+  > .home {
+    font-size: 20px;
+    line-height: 1.25;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+
+    > p {
+      > a {
+        color: hsl(225 75% 75%);
+      }
+    }
   }
 
   > .loading,
